# yourharmony

./: .dockerignore  .gitignore  ACTION-PLAN.md  ANDROID-APP-PLAN.md  CLAUDE.md  DOCS.md  Dockerfile  FULL-AUDIT-REPORT.md  README.md  docker-compose.yml  jest.config.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  preform-qa.html  prisma.config.ts  redesign-concept.html  redesign-light.html
api/: .gitignore  Dockerfile  config.py  database.py  dependencies.py  main.py  pyproject.toml
api/controllers/: auth.py  blog.py  bookings.py  finance.py  schedule.py  students.py
api/middleware/: error_handler.py
api/models/: __init__.py  booking.py  lesson.py  post.py  site_settings.py  student.py
api/repositories/: blog.py  bookings.py  finance.py  schedule.py  students.py
api/routers/: auth.py  blog.py  bookings.py  finance.py  schedule.py  students.py
api/schemas/: auth.py  blog.py  bookings.py  finance.py  schedule.py  students.py
api/services/: auth.py  blog.py  bookings.py  finance.py  schedule.py  students.py
api/tests/: conftest.py
api/tests/integration/: test_auth_endpoints.py  test_blog_endpoints.py  test_schedule_endpoints.py  test_students_endpoints.py
api/tests/unit/: test_auth_service.py  test_blog_service.py  test_edge_cases.py  test_schedule_service.py  test_students_service.py
docs/sections/: general.md  (+4 more)
nginx/: nginx.conf
prisma/: schema.prisma  seed.ts
public/: llms.txt
scripts/: gen-og.mjs
src/: auth.test.ts  auth.ts  middleware.ts  proxy.ts
tests/: admin-auth.spec.ts  bookings.spec.ts  example.spec.ts
(+150 files in other folders)
